--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import '~material-design-icons/iconfont/material-icons.css';
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+body{
+    background: rgb(103,58,183);
+    background: radial-gradient(circle, rgba(103,58,183,1) 0%, rgba(103,58,183,1) 11%, rgba(255,255,255,1) 100%);
+}
