Logo related changes commit

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
       <mat-card-header>
         <mat-card-title>
           <div style="width: 360px; height: 150px;">
-            <img src="../../assets/images/OMS.png" width="50%"/>
+            <img src="../../assets/images/oms_new.png" width="50%"/>
           </div>
           <div class="login-title">
               <span>Welcome! please sign in</span>
